crates/oxc_css_parser/tests/error/less/detached-ruleset/1.snap
---
source: crates/oxc_css_parser/tests/error.rs
---
error: expect token `;`, but found `{`
  ┌─ 1.less:1:4
  │
1 │ .a {
  │    ^


